[gd_scene load_steps=5 format=3 uid="uid://6ynm8n4ap4yy"]

[ext_resource type="Script" path="res://ship_area.gd" id="1_f0tdh"]
[ext_resource type="PackedScene" uid="uid://giank48sh34g" path="res://ship.tscn" id="2_mnjad"]
[ext_resource type="PackedScene" uid="uid://bwf6gyjsnbg5q" path="res://placement_area.tscn" id="3_tyw4u"]
[ext_resource type="Texture2D" uid="uid://056a7lgtpeke" path="res://icon.svg" id="3_wsy7q"]

[node name="ShipArea" type="Node2D"]
position = Vector2(3, 3)
script = ExtResource("1_f0tdh")
ship_scene = ExtResource("2_mnjad")

[node name="WaitingArea2D" parent="." instance=ExtResource("3_tyw4u")]
position = Vector2(775, 378)

[node name="DockedArea2D" parent="." instance=ExtResource("3_tyw4u")]
position = Vector2(775, 666)

[node name="Button" type="Button" parent="."]
offset_left = 1650.0
offset_top = 95.0
offset_right = 1837.0
offset_bottom = 159.0
text = "Bring in new ship"
metadata/_edit_use_anchors_ = true

[node name="PlacementGhost" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.368627)
texture = ExtResource("3_wsy7q")
centered = false

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
